multiple metaInfos in one compost + better error log + swallowing exception